--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 name: "我爱车评人"
 title: "我爱车评人"
 description: "酷酷的汽车旅行!"
-logo: 'assets/images/logo1.png'
-favicon: 'assets/images/logo.png'
+logo: 'assets/images/logo.png'
+favicon: 'assets/images/boy.svg'
 baseurl: /car-review
 google_analytics: 'UA-xxxxxxxx-1'
 disqus: 'ilovecar'
@@ -17,6 +17,7 @@ authors:
   sal:
     name: Sal
     display_name: Sal
+    avatar: 'assets/images/girl.svg'
     gravatar: e56154546cf4be74e393c62d1ae9f9d4
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net/donate/
@@ -36,7 +37,7 @@ authors:
   tom:
     name: Tom
     display_name: Tom
-    avatar: 'assets/images/avatar.png'
+    avatar: 'assets/images/boy.svg'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
     email: wowthemesnet@gmail.com
     web: https://www.wowthemes.net
@@ -46,7 +47,7 @@ authors:
   momo:
     name: Momo
     display_name: Momo
-    avatar: 'assets/images/avatar.png'
+    avatar: 'assets/images/boy.svg'
     gravatar: b1cc14991db7a456fcd761680bbc8f81
     email: wowthemesnet@gmail.com
     web: https://www.hello.net
